@startuml
skinparam monochrome true
skinparam shadowing false
skinparam dpi 220
skinparam defaultFontName "PingFang TC"
skinparam defaultFontSize 12
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 40
hide circle
hide empty methods

entity "users" as users {
  {field} <&key> user_id : int
  --
  {field} email : varchar(255)
  {field} password_hash : varchar(255)
  {field} nickname : varchar(50)
  {field} avatar_url : varchar(500)
  {field} bio : text
  {field} phone : varchar(20)
  {field} birthday : date
  {field} gender : enum
  {field} role : enum
  {field} is_active : tinyint(1)
  {field} is_blacklisted : tinyint(1)
  {field} created_at : datetime
  {field} updated_at : datetime
  {field} bonus_points : int
  {field} deletion_requested_at : datetime
  {field} anonymized_at : datetime
  {field} share_token : char(32)
  {field} password_set : tinyint(1)
}
entity "user_identities" as user_identities {
  {field} <&key> identity_id : int
  --
  {field} user_id : int
  {field} provider : enum
  {field} subject : varchar
  {field} email : varchar(255)
  {field} phone : varchar(20)
  {field} display_name : varchar(100)
  {field} created_at : datetime
  {field} last_login_at : datetime
}
entity "user_passkeys" as user_passkeys {
  {field} <&key> passkey_id : int
  --
  {field} user_id : int
  {field} credential_id : varchar(255)
  {field} public_key : text
  {field} sign_count : int
  {field} transports : varchar(100)
  {field} aaguid : char(36)
  {field} backed_up : tinyint(1)
  {field} device_label : varchar(50)
  {field} created_at : datetime
  {field} last_used_at : datetime
}
entity "webauthn_challenges" as webauthn_challenges {
  {field} <&key> challenge : char(64)
  --
  {field} user_id : int
  {field} purpose : enum
  {field} created_at : datetime
}
entity "user_sessions" as user_sessions {
  {field} <&key> session_id : int
  --
  {field} user_id : int
  {field} sid : char(32)
  {field} device_id : varchar(64)
  {field} device_name : varchar(100)
  {field} platform : varchar(20)
  {field} app_version : varchar(20)
  {field} ip_address : varchar(45)
  {field} pay_key_hash : char(64)
  {field} created_at : datetime
  {field} last_seen_at : datetime
  {field} revoked_at : datetime
}
entity "login_logs" as login_logs {
  {field} <&key> log_id : int
  --
  {field} user_id : int
  {field} login_at : datetime
  {field} ip_address : varchar(45)
  {field} device_info : varchar(255)
  {field} login_method : varchar(20)
}
entity "oauth_states" as oauth_states {
  {field} <&key> state : char(32)
  --
  {field} provider : varchar(20)
  {field} mode : enum
  {field} user_id : int
  {field} created_at : datetime
}
entity "oauth_results" as oauth_results {
  {field} <&key> code : char(32)
  --
  {field} payload : text
  {field} created_at : datetime
}
entity "push_devices" as push_devices {
  {field} <&key> device_id : int
  --
  {field} user_id : int
  {field} token : varchar(255)
  {field} platform : enum
  {field} app_version : varchar(20)
  {field} created_at : datetime
  {field} last_seen_at : datetime
  {field} session_sid : char(32)
}
users ||--o{ user_identities
users ||--o{ user_passkeys
users ||--o{ user_sessions
users ||--o{ login_logs
users ||--o{ push_devices
user_identities -[hidden]down- push_devices
@enduml
